updated currently sec

--- a/website/home.html
+++ b/website/home.html
@@ -9,7 +9,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>☆ doqmeat v3 ☆</title>
+	<title>☆ doqmeat ☆</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!--	CSS -->
@@ -118,14 +118,14 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
+			<p><span class="hl">playing:</span> a little bit of <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
-				fujimoto</p>
-			<p><span class="hl">watching:</span> the same 5 blu-rays i have over and over again</p>
+				fujimoto (I NEED TO CATCH UP ON THESE SO BADLY....)</p>
+			<p><span class="hl">watching:</span> the same 5 blu-rays i own over and over again</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> my apartment ( ˘︹˘ ), studying</p>
-			<p><span class="hl">coding/writing:</span> journal 3.0 ver!</p>
-			<p class="date">last updated on 22.feb.24</p>
+			<p><span class="hl">working on:</span> making my apartment pretty! also studying</p>
+			<p><span class="hl">coding/writing:</span> nothing atm</p>
+			<p class="date">last updated on 03.mar.24</p>
 		</div>
 
 		<div id="updates" class="box">
@@ -133,15 +133,6 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
 			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
 			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
-			<li>17.feb.24 - new <a href="/journal">journal log</a>! also changed featured cat</li>
-			<li>25.jan.24 - updated and fixed <a href="/shrines/mizu/index.html">mizu shrine</a> code and added a little gallery at the end so i can keep adding mizu pics!</li>
-			<li>20.jan.24 - added new entry to <a href="/photobook/index.html">photobook</a> + <a href="/scrapbook/2024/index.html">scrapbook</a> + new featured page!</li>
-			<li>15.jan.24 - created <a href="/collection/cats">cat hoarding</a> page in collection!</li>
-			<li>12.jan.24 - created <a href="/scrapbook">scrapbook</a>! <small>will be decorating it more in the future!</small></li>
-			<li>11.jan.24 - <a href="/journal">journal log</a>: grandma</li>
-			<li>05.jan.24 - <a href="/journal">journal log</a>: back home! + new featured cat</li>
-			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
-			<li>22.dec.23 - <a href="/journal">journal log</a></li>
 		</div>
 
 		<div id="featured-cat" class="box">
