--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -70,38 +70,28 @@
 
 		<br>
 
-
-		<div class="button">
-			<a title="have statuses on your blog!" href="https://status.cafe" target="_blank"><img src="/sites/!g/status.png"></a>
-			<a title="pixels" href="http://whimsical.heartette.net" target="_blank"><img src="/sites/!g/whimsical.gif"></a>
-			<a href="https://99gifshop.neocities.org" target="_blank"><img src="/sites/!g/99gifshop.png"></a>
-			<a title="decoration materials for websites!" href="https://foollovers.com/" target="_blank"><img src="/sites/!g/foolloversbanner.gif"></a>
-			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="https://nukocities.neocities.org/img/nukocities.gif"></a>
-			<a title="tumblr blog with pixels, cute bgs, etc" href="http://engrampixel.tumblr.com" target="_blank"><img src="http://media.tumblr.com/tumblr_m5106aHKT11qid2nw.gif"></a>
-			<a title="pixels and toybox" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/sites/!g/sleepysprout.png"></a>
-			<a title="pixel adoptables, bgs, div boxes" href="https://www.lejlart.com/apple.html" target="_blank"><img src="/sites/!g/appledust.gif"></a>
-			<a title="cute pixel web materials" href="http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="/sites/!g/apupu.gif"></a>
-			<a title="pixels" href="https://lostsozai.tumblr.com" target="_blank"><img src="/sites/!g/lostsozai.gif"></a>
-			<a title="web materials!" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/sites/!g/sozaiya405.gif"></a>
-			<a title="articles and resources for web devs" href="https://neonaut.neocities.org" target="_blank"><img src="/sites/!g/neonaut.png"></a>
-			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
-		</div>
-
-		<!-- coding related resources -->
-
 		<p class="centered"><img src="/!g/div/rollingstars.gif"><img src="/!g/div/rollingstars.gif"></p>
 
-		<h2 id="c">coding</h2>
+		<h2 id="c">coding &amp; webdev</h2>
+		<p>linking stuff that has helped me on my web coding journey! do remember that <b>practice</b> is key!</p>
 
 		<h3 id="editor">editors and other programs</h3>
 		<li><a href="https://codepen.io" target="_blank">codepen</a> - online editor with a live preview, lets you save + share codes with an acc. you can see mine <a href="https://codepen.io/doqmeat" target="_blank">here!</a></li>
 		<li><a href="https://notepad-plus-plus.org/" target="_blank">notepad++</a> - offline editor, like notepad but with more stuff!</li>
-		<li><a href="https://brackets.io/" target="_blank">brackets</a> - offline editor, centered around coding HTML, has <a href="https://registry.brackets.io/" target="_blank">extensions</a> support! has an <a href="https://phcode.dev/" target="_blank">online version</a> as well</li>
+		<li><a href="https://brackets.io/" target="_blank">brackets</a> - offline editor, centered around coding HTML, has <a href="https://registry.brackets.io/" target="_blank">extensions</a> support! has an <a href="https://phcode.dev/" target="_blank">online version</a> as well. <small>this is the one i use!</small></li>
 		<li><a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> - offline editor, supported by microsoft, it has a TON of extensions and other options in comparison to brackets.</li>
 		<li><a href="https://desktop.github.com/" target="_blank">github desktop</a> - program used to update my website's code directly from my PC without having to open neocities built-in coder using <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a>. this is such a time-saver and i really recommend it to everyone who updates their site a lot.</li>
 
-		<h3 id="coding-help">HTML, CSS, and JS tutorials</h3>
-		<p>linking stuff that has helped me on my web coding journey! do remember that <b>practice</b> is key!</p>
+		<h3 id="hosting">hosting</h3>
+		<li><a href="https://neocities.org/" target="_blank">neocities</a> - where my site is currently hosted on :3 1gb of space on a free acc</li>
+		<li><a href="https://ichi.city/" target="_blank">ichi.city</a> - host a small site with only 10mb of space. have fun!</li>
+		<li><a href="https://nekoweb.org" target="_blank">nekoweb</a> - has 500mb of space, super cute interface, also features social aspects similar to neocities!</li>
+		<li><a href="https://pages.github.com/" target="_blank">github pages</a> - make a repository named (YOURUSERNAME).github.io and boom. hosted directly from your repository.</li>
+
+		<h3 id="coding-help">HTML, CSS, JS help</h3>
+
+		<p>in my personal experience, i actually learned the basics of HTML and CSS through using and experimenting with <a href="#layouts">templates!</a> but these sites are of huge help as well.</p>
+
 		<h4>beginner stuff (HTML and CSS focused)</h4>
 		<li><a href="https://www.w3schools.com" target="_blank">w3schools</a> - super beginner friendly that shows you the basics of webpages with demos.</li>
 		<li><a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla.org</a> - info and references for things used in HTML, CSS, and JS. if you don't know what something does, go here and find out!!</li>
@@ -109,15 +99,26 @@
 		<li><a href="https://internetingishard.netlify.app/" target="_blank">interneting is hard</a> - beginner friendly web dev tutorials!</li>
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
 
-		<h4>CSS</h4>
-		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
-
 		<h4>javascript</h4>
 		<li><a href="https://javascript.info/" target="_blank">javascript.info</a></li>
 		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a></li>
 		<li><a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">a smarter way to learn JS (PDF book)</a></li>
 		<li><a href="https://www.freecodecamp.org" target="_blank">freecodecamp</a> - courses and projects for you to learn responsive web design, basic javascript, and much more!</li>
 		<li><a href="https://www.theodinproject.com/" target="_blank">the odin project</a></li>
+
+		<h4>CSS</h4>
+		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
+
+		<h3 id="layouts">templates / layouts</h3>
+
+		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
+		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
+		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> /
+		<a title="templaterr" href="https://templaterr.neocities.org" target="_blank">templaterr</a> /
+		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
+		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
+		<a href="https://cinni.net/?z=/theme/layouts" target="_blank">cinni</a> /
+		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a>
 
 		<h3 id="sites">useful sites</h3>
 
@@ -194,22 +195,6 @@
 		<li><a href="https://stackoverflow.com/questions/21479107/saving-html5-textarea-contents-to-file/48550997#48550997" target="_blank">save textarea as txt file</a></li>
 		<li><a href="https://pastebin.com/N4uKpWLs" target="_blank">CRT TV effect</a></li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
-
-
-		<h3 id="layouts">templates / layouts</h3>
-
-		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
-		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
-		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> /
-		<a title="templaterr" href="https://templaterr.neocities.org" target="_blank">templaterr</a> /
-		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
-		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
-		<a href="https://cinni.net/?z=/theme/layouts" target="_blank">cinni</a> /
-		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a>
-
-		<h3 id="hosting">hosting</h3>
-		<li><a href="https://neocities.org/" target="_blank">neocities</a> - where my site is currently hosted on :3 1gb of space on a free acc.</li>
-		<li><a href="https://ichi.city/" target="_blank">ichi.city</a> - host a small site with only 10mb of space. have fun!</li>
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
