quick fix to /journal
edited some text

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -35,10 +35,9 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<img src="/!g/deco/diary.gif">
 			<p>a place where i talk about what's going on in my life and about my site!</p>
 			<p><a href="credit.html" target="iframe_a">credit</a> for materials used</p>
-			<small class="sticky">all sticky notes are draggable!</small>
 			<details>
 				<summary>journal content notes</summary>
-				<p>i try to be as coherent as possible in these entries. for whatever nonsense i have atm, feel free to check out my <a href="" class="outlink">microblog</a></p>
+				<p>there is a genuine effort for these to be as coherent as possible, i don't exactly like to ramble in here about whatever, i leave that for my <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> ^_^</p>
 				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
 			</details>
 			<br>
@@ -61,6 +60,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 				<a href="2023/05.html" target="iframe_a">may</a>
 				<a href="2023/04.html" target="iframe_a">april</a>
 			</details>
+			<small class="sticky">all sticky notes are draggable!</small>
 		</nav>
 
 		<main>
@@ -126,7 +126,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
-			<h3 style="text-align: center;margin:3px;"><a href="https://doqmeat.blog.fc2.com/" title="nonsense and ramblings" target="_blank">des' microblog</a></h3>
+			<h3 style="text-align: center;margin:3px;"><a href="https://doqmeat.blog.fc2.com/" title="hosted on FC2, updated frequently bc i can't stfu" target="_blank" style="text-decoration: none;">des' microblog</a></h3>
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.blog.fc2.com%2F%3Fxml&showtitle=false&type=js"></script>
 		</div>
 	</aside>
