quick fix to /sites

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -126,7 +126,7 @@
 			<a title="olivia" href="https://egoisthye.neocities.org/" target="_blank"><img src="!g/egoisthye.png"></a>
 			<a title="lav & val - love their resources links!" href="https://justfluffingaround.neocities.org/" target="_blank"><img src="!g/justfluffingaround.png"></a>
 			<a title="jamie - fun little personal sie" href="https://shinyexe.neocities.org/" target="_blank"><img src="!g/shinyexe.gif"></a>
-			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank">a<img src="!g/pomelo.gif"></a>
+			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
 			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
 			<a title="scout - found this site through the vocaloid webring cus they put a siinamota song as one of their favs! i like their blogs" href="https://scootarooni.neocities.org/" target="_blank"><img src="!g/scootarooni.png"></a>
 			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
