quick fix to /notebook/links

--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>links</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -246,6 +247,7 @@
 		<li><a href="https://fruchtgummi.tumblr.com" target="_blank">fruchtgummi</a> - favicons, tags available</li>
 		<li><a href="https://lostsozai.tumblr.com" target="_blank">lostsozai</a> - pixels of all sizes, dividers, gifs</li>
 		<li><a href="https://pixel-soup.tumblr.com" target="_blank">pixel-soup</a> - pixels of all sizes, bits of codes, tags available</li>
+		<li><a href="https://cutewebgraphics.tumblr.com" target="_blank">cutewebgraphics</a> - bgs, pixels, blinkies, and more! tags available</li>
 
 
 		<p>tumblr pixel masterposts: <a href="https://www.tumblr.com/morbidweb/682217681754128384/music-pixels?source=share" target="_blank">music pixels</a>, <a href="https://www.tumblr.com/liveleaking/705565299552010240/music-decome?source=share" target="_blank">music pixels 2</a>, <a href="https://www.tumblr.com/kinoshitafuyou/691150121079111680/kitten-batch-request?source=share" target="_blank">cat emoticons</a>, <a href="https://www.tumblr.com/kinoshitafuyou/691150121079111680/kitten-batch-request?source=share" target="_blank">cat emojis</a>, <a href="https://www.tumblr.com/honeypuppixels/693601240746246144/cat-favicons?source=share" target="_blank">cat pixels emojis</a>, <a href="https://www.tumblr.com/animatedglittergraphics-n-more/699754615362797568/kitty-favicon?source=share" target="_blank">cat emoticons 2</a>, <a href="https://tenshiikisu.tumblr.com/post/79015021080/heres-my-collection-of-pixel-backgrounds-tile" target="_blank">tenshiikisu's bg masterpost</a></p>
