updated internet stamps collection
- added a seal stamp :+1:

--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -3,30 +3,17 @@
 
 <head>
 	<!-- coded with love by des 
------------
-https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 -->
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>stamps &amp; blinkies</title>
 	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/laptop.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="internet-stamps.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 
 </head>
@@ -125,7 +112,8 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 			<img src="!g/beelieve.png">
 			<img src="!g/meow.jpg">
 			<img src="!g/birchforestconceptart.png">
-			<img src="!g/mobfighton.gif">
+			<img src="!g/mobfighton.gif" alt="mob fight on!">
+			<img src="!g/seal.gif" alt="silly seal">
 			<img src="!g/nightowl.gif">
 			<img src="!g/cat2.gif"><a href="https://www.deviantart.com/tradt-production/art/GH-Warrior-Pandora-416079617" target="_blank">
 				<img src="!g/pandora.png"></a>
