quick fixes to notebook

--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -15,23 +15,10 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -61,14 +48,14 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<ul>
 						↳ <a href="links#c" target="iframe_a">coding</a>
 						<ul><small>
-								<a href="links#coding-help" target="iframe_a">HTML, CSS, and JS tutorials</a>,
 								<a href="links#editor" target="iframe_a">editors</a>,
+								<a href="links#hosting" target="iframe_a">hosting</a>,
+								<a href="links#coding-help" target="iframe_a">HTML, CSS, and JS help</a>,
+								<a href="links#layouts" target="iframe_a">F2U layouts and templates</a>,
 								<a href="links#sites" target="iframe_a">useful sites</a>,
-								<a href="links#tut" target="iframe_a">tutorials</a>,
-								<a href="links#cool" target="iframe_a">stuff to put on your site</a>,
+								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
+								<a href="links#cool" target="iframe_a">cool stuff to put on your site</a>,
 								<a href="links#neat" target="iframe_a">neat codes</a>,
-								<a href="links#layouts" target="iframe_a">F2U layouts</a>,
-								<a href="links#hosting" target="iframe_a">hosting</a>
 							</small></ul>
 						<br>↳ <a href="links#p" target="iframe_a">graphics</a>
 						<ul><small>
