--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -90,28 +90,26 @@
 		<li><a href="https://pages.github.com/" target="_blank">github pages</a> - make a repository named (YOURUSERNAME).github.io and boom. hosted directly from your repository.</li>
 
 		<h3 id="coding-help">HTML, CSS, JS help</h3>
-
 		<p>in my personal experience, i actually learned the basics of HTML and CSS through using and experimenting with <a href="#layouts">templates!</a> but these sites are of huge help as well.</p>
 
-		<h4>beginner stuff (HTML and CSS focused)</h4>
+		<h4 id="beginner">beginner stuff (HTML and CSS focused)</h4>
 		<li><a href="https://www.w3schools.com" target="_blank">w3schools</a> - super beginner friendly that shows you the basics of webpages with demos.</li>
 		<li><a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla.org</a> - info and references for things used in HTML, CSS, and JS. if you don't know what something does, go here and find out!!</li>
 		<li><a href="https://www.htmldog.com/" target="_blank">htmldog</a> - simple and straight forward tutorials and info for HTML, CSS, and JS. they have tutorials for beginners as well as more advanced ones!</li>
 		<li><a href="https://internetingishard.netlify.app/" target="_blank">interneting is hard</a> - beginner friendly web dev tutorials!</li>
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
 
-		<h4>javascript</h4>
+		<h4 id="js">javascript</h4>
 		<li><a href="https://javascript.info/" target="_blank">javascript.info</a></li>
 		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a></li>
 		<li><a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">a smarter way to learn JS (PDF book)</a></li>
 		<li><a href="https://www.freecodecamp.org" target="_blank">freecodecamp</a> - courses and projects for you to learn responsive web design, basic javascript, and much more!</li>
 		<li><a href="https://www.theodinproject.com/" target="_blank">the odin project</a></li>
 
-		<h4>CSS</h4>
+		<h4 id="css">CSS</h4>
 		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
 
 		<h3 id="layouts">templates / layouts</h3>
-
 		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
 		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
 		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> /
@@ -122,7 +120,6 @@
 		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a>
 
 		<h3 id="sites">useful sites</h3>
-
 		<li><a href="https://ready.mobi" target="_blank">ready.mobi</a> - preview your site on a mobile sized iframe! great to check for optimization for mobile browsers</li>
 		<li><a href="https://www.html.am/html-editors/html-text-editor.cfm" target="_blank">www.html.am</a> - html text editor</li>
 		<li><a href="https://validator.w3.org/nu/" target="_blank">HTML validator</a></li>
