--- a/website/photobook/index.html
+++ b/website/photobook/index.html
@@ -6,27 +6,15 @@
 coded with love by des  
 -->
 	<meta charset="UTF-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>photobook</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/camera.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 
 </head>
