--- a/website/about/index.html
+++ b/website/about/index.html
@@ -19,7 +19,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function() {
