--- a/website/masaaki-yuasa/index.html
+++ b/website/masaaki-yuasa/index.html
@@ -13,7 +13,7 @@ https://coolors.co/1553d8-87ca21-f1e72a-f6a90d-cc19ec
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function() {
