--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -24,7 +24,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function() {
