--- a/website/sitemap.html
+++ b/website/sitemap.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function() {
