--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -160,7 +160,7 @@
 			<a title="wrender - cuteeee site with lots to see! i like how each page follows a color palette" href="https://wrender.neocities.org/" target="_blank"><img src="!g/wrender.gif" alt="wrender"></a>
 			<a title="ruili - blueee" href="https://ruili.neocities.org/" target="_blank"><img src="!g/ruili.gif" alt="ruili"></a>
 			<a title="lucard - what a lovely site this is looking up to be!! so excited to see the progress" href="https://lucard.neocities.org/" target="_blank"><img src="!g/lucard.png" alt="lucard"></a>
-			<a title="cuteee" href="https://mypillowfort.neocities.org/" target="_blank"><img src="!g/mypillowfort.jpeg" alt="mypillowfort"></a>
+			<a title="super cute site with tutorials and graphics" href="https://mypillowfort.nekoweb.org/" target="_blank"><img src="!g/mypillowfort.gif" alt="mypillowfort"></a>
 			<a title="marcika - awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 			<a title="pp - i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 			<a title="dryad - cozy site" href="https://cyberneticdryad.neocities.org/" target="_blank"><img src="!g/cyberneticdryad.gif" alt="cyberneticdryad"></a>
