--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -18,7 +18,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function() {
