--- a/website/home.html
+++ b/website/home.html
@@ -3,7 +3,7 @@
 <!-- 
 coded with love by des!
 started on nov 15 2023 / finished on dec 14 2023!
-feel free to look around :) just don't be THAT person and take the entire code for your site...
+feel free to look around for any help you need :) just don't be THAT person and take the entire code for your site... you're free to take bits of my code but pls let me know before hand! i might be able to help you out :-)
  -->
 
 <head>
@@ -345,7 +345,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			setTimeout(function() {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
-		}(" doqmeat v3 ☆⌒(*＾-゜)v☆ "));
+		}(" doqmeat ☆⌒(*＾-゜)v☆ "));
 
 	</script>
 	<script src="!f/homepage-v3/last.fm.js">
