--- a/website/masaaki-yuasa/index.html
+++ b/website/masaaki-yuasa/index.html
@@ -7,6 +7,7 @@ https://coolors.co/1553d8-87ca21-f1e72a-f6a90d-cc19ec
 
 <head>
 	<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>masaaki yuasa list</title>
 	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/plushies.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
