--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -4,6 +4,7 @@
 <head>
 	<!-- coded with love by des  -->
 	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>button wall</title>
 	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/puter.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
