--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -11,6 +11,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 how to get an img to recognize the :focus thingy in css: https://stackoverflow.com/questions/27327765/how-to-get-a-img-tag-the-focus
 -->
 	<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>video games</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
