--- a/website/home.html
+++ b/website/home.html
@@ -120,7 +120,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> a little bit of <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
-				fujimoto (I NEED TO CATCH UP ON THESE SO BADLY....)</p>
+				fujimoto (update: i have caught up with CSM :'))</p>
 			<p><span class="hl">watching:</span> the same 5 blu-rays i own over and over again</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> making my apartment pretty! also studying</p>
@@ -130,6 +130,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>07.mar.24 - new <a href="/journal">journal log</a>!</li>
 			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
 			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
 			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
