forgor to add march  to journal index
oops

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -45,6 +45,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<br>
 			<details open>
 				<summary>2024</summary>
+				<a href="2024/03.html" target="iframe_a">march</a>
 				<a href="2024/02.html" target="iframe_a">february</a>
 				<a href="2024/01.html" target="iframe_a">january</a>
 			</details>
@@ -64,7 +65,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 		</nav>
 
 		<main>
-			<iframe src="2024/02.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
+			<iframe src="2024/03.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
 		</main>
 	</div>
 
